[metadata]
name = pdbe-complexes-demo
author = Sreenath Nair
author_email = sreenath@ebi.ac.uk
description = A Python package
version = 1.0.1
url =
keywords =
  python
  neo4j
  graph
  complex
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Life Science/Structural Biology
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.8
packages = find_namespace:
zip_safe: False
include_package_data = True
install_requires =
  click
  requests
  xmltodict
  gemmi
  python-dotenv
  py2neo
  pydantic

[options.entry_points]
console_scripts =
 pdbecomplexes_demo = app.cli:main
